# face_alignment_cvpr_2012

./: CMakeLists.txt  README.md  lfw_ffd_ann.txt
data/: config_ffd.txt  config_headpose.txt
include/: FaceForest.hpp  FeatureChannelFactory.hpp  Forest.hpp  HeadPoseSample.hpp  ImageSample.hpp  MPSample.hpp  MeanShift.hpp  SplitGen.hpp  ThresholdSplit.hpp  Timing.hpp  Tree.hpp  TreeNode.hpp  Viewer.hpp  face_forest.hpp  face_utils.hpp  feature_channel_factory.hpp  opencv_serialization.hpp  trace.hpp  tree.hpp
src/: FaceForest.cpp  HeadPoseSample.cpp  ImageSample.cpp  MPSample.cpp  Viewer.cpp  demo.cpp  eval_ffd.cpp  face_forest.cpp  face_utils.cpp  image_sample.cpp  test_cvpr_2012.cpp  train_ffd.cpp  train_headpose.cpp
